# control_framework

./: .gitignore  MUJOCO_LOG.TXT
csv_data/: .~lock.cart_pole_lqr_pos_v1.csv#  .~lock.cart_pole_lqr_pos_v3.csv#  .~lock.time_v2.csv#  time_v2.csv
csv_data/cart_pole/: excel_record_log.csv
install/: local_setup.sh  setup.sh
install/control_framework_interfaces/include/control_framework_interfaces/control_framework_interfaces/msg/: control_input.hpp  joint_state.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  state.h  state.hpp
install/control_framework_interfaces/include/control_framework_interfaces/control_framework_interfaces/msg/detail/: control_input__functions.c  control_input__functions.h  control_input__rosidl_typesupport_introspection_c.h  control_input__struct.h  control_input__struct.hpp  control_input__traits.hpp  control_input__type_support.c  control_input__type_support.cpp  control_input__type_support.h  joint_state__functions.c  joint_state__functions.h  joint_state__rosidl_typesupport_introspection_c.h  joint_state__rosidl_typesupport_introspection_cpp.hpp  joint_state__struct.h  joint_state__struct.hpp  joint_state__type_support.h  state__rosidl_typesupport_fastrtps_c.h  state__type_support.c  state__type_support.cpp  (+1 more)
install/control_framework_interfaces/share/ament_index/resource_index/parent_prefix_path/: control_framework_interfaces
install/control_framework_interfaces/share/ament_index/resource_index/rosidl_interfaces/: control_framework_interfaces
install/control_framework_interfaces/share/control_framework_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/control_framework_interfaces/share/control_framework_interfaces/cmake/: control_framework_interfacesConfig.cmake  control_framework_interfaces__rosidl_typesupport_cExport.cmake  control_framework_interfaces__rosidl_typesupport_cppExport.cmake  export_control_framework_interfaces__rosidl_generator_pyExport.cmake  export_control_framework_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_control_framework_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/control_framework_interfaces/share/control_framework_interfaces/rust/src/: msg.rs  srv.rs
install/control_framework_interfaces/share/control_framework_interfaces/srv/: ControllerSelect_Request.msg  InitState.idl  InitState_Request.msg  ResetRecord.idl  ResetRecord.srv  ResetRecord_Request.msg
install/controller/include/controller/: base_controller.hpp  controllers.hpp  implemented_controllers.hpp
install/controller/lib/controller/: controller_node
install/controller/share/ament_index/resource_index/package_run_dependencies/: controller
install/controller/share/controller/: local_setup.sh  package.ps1  package.sh  package.xml
install/controller/share/controller/cmake/: ament_cmake_export_include_directories-extras.cmake  controllerConfig.cmake  controllerTargetsExport.cmake
install/controller/share/controller/config/cart_pole/: test.yaml
install/controller/share/controller/launch/: test_controller_launch.py
install/excel_record_logging/share/ament_index/resource_index/package_run_dependencies/: excel_record_logging
install/excel_record_logging/share/excel_record_logging/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lockstep_sim/lib/lockstep_sim/: lockstep_sim
install/lockstep_sim/share/ament_index/resource_index/parent_prefix_path/: lockstep_sim
install/lockstep_sim/share/lockstep_sim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lockstep_sim/share/lockstep_sim/cmake/: lockstep_simConfig.cmake
install/lockstep_sim/share/lockstep_sim/models/: cart_pole.xml
install/services/lib/services/: service_server
install/services/share/services/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/services/share/services/cmake/: servicesConfig.cmake
install/sim/share/ament_index/resource_index/package_run_dependencies/: sim
install/sim/share/sim/: local_setup.sh  package.ps1  package.sh
launch/: control_framework_launch.py  lockstep_sim_launch.py  lockstep_sim_launch.xml  test_setup_launch.py
log/: latest_build
src/control_framework_interfaces/: CMakeLists.txt
src/control_framework_interfaces/msg/: ControlInput.msg  JointState.msg  TestMsg.msg
src/control_framework_interfaces/srv/: InitState.srv
src/controller/: CMakeLists.txt  package.xml
src/controller/config/cart_pole/: lqr.yaml
src/controller/include/controller/: base_controller.hpp  controller_node.hpp  controllers.hpp
src/controller/src/: base_controller.cpp  controller_node.cpp  controllers.cpp  main.cpp
src/excel_record_logging/: CMakeLists.txt
src/excel_record_logging/include/excel_record_logging/: excel_record_logging.hpp
src/excel_record_logging/src/: excel_record_logging.cpp  main.cpp
src/lockstep_sim/: CMakeLists.txt  package.xml
src/lockstep_sim/config/cart_pole/: urdf_joint_ignore.yaml
src/lockstep_sim/include/lockstep_sim/: lockstep_sim.hpp  render.hpp  utilities.hpp
src/lockstep_sim/include/sim/: lockstep_sim.hpp  parallel_sim.hpp  sim.hpp
src/lockstep_sim/models/: cart_pole.xml  cart_pole_mjcf.xml  cart_pole_urdf.xml
src/lockstep_sim/src/: lockstep_sim.cpp  main.cpp  main_parallel.cpp  parallel_sim.cpp  render.cpp  sim.cpp
src/services/: CMakeLists.txt
src/services/src/: services.cpp
src/sim/: CMakeLists.txt
src/sim/include/sim/: parallel_sim.hpp  sim.hpp
src/sim/models/: cart_pole.xml  cart_pole_urdf.xml
src/sim/src/: lockstep_sim.cpp  main_lockstep.cpp  main_parallel.cpp  parallel_sim.cpp  sim.cpp
src/test_package/: CMakeLists.txt  package.xml
src/test_package/include/test_package/: test_node.hpp
src/test_package/src/: main.cpp  test_node.cpp
(+33 files in other folders)
